# cdugks-2d

./: LICENSE  README.md
code/: CMakeLists.txt  cdugks_2d.cpp  cdugks_2d.h  config.h  mesh_read.cpp  mesh_read.h  mpi_process.cpp  mpi_process.h  output.cpp  output.h  test_cavity.cpp  test_cavity.h  test_cylinder.cpp  test_cylinder.h  test_cylinder_half.cpp  test_cylinder_half.h  test_riemann_1d.cpp  test_riemann_1d.h  test_riemann_2d.cpp  test_riemann_2d.h
mesh_file/: 100x100.neu  200x20.neu  20x400.neu  400x20.neu  column.neu  cylinder-half.neu  cylinder.neu  cylinder_kn1_2D_GSI.neu  hello.neu  unstruct_1192.neu  unstruct_2239.neu  unstruct_3601.neu  unstruct_4521.neu  unstruct_5291.neu  unvel_10000.neu  vel_10000.neu  vel_2500.neu
